fixed z-index issue with oak

--- a/web/css/base.css
+++ b/web/css/base.css
@@ -53,7 +53,10 @@ h1 { font-weight: 300; font-size: 4em; margin: 0px; padding-left: 2%; }
 }
 
 .admin .sgBox {
-    min-height: 300px;
+    min-height: 350px;
+    background-color: #FFE4E0;
+    box-shadow:0px 0px 0px 3px #FFFEFD inset;
+    border-radius: 10px 10px;
 }
 
 .leaderTag,
@@ -122,7 +125,6 @@ h1 { font-weight: 300; font-size: 4em; margin: 0px; padding-left: 2%; }
     height: 342px;
     background: url(/images/oak.png) no-repeat right bottom;
     margin: 30px;
-    z-index: 99;
     float: right;
 }
 
@@ -218,10 +220,11 @@ button.action span {
 
 .sgBox {
     vertical-align: top;
-    width: 30%;
-    max-width: 30%;
+    width: 27%;
+    max-width: 27%;
     display: inline-block;
     padding: 1.5%;
+    margin: 1.5%;
 }
 
 .sgBox .line {
@@ -237,13 +240,14 @@ button.action span {
         background-color: blue;
     }
     .content,
+    .admin > #content,
     #content {
         width: 95%;
     }
 
     .sgBox {
-        width: 45%;
-        max-width: 45%;
+        width: 42%;
+        max-width: 42%;
     }
 
     .leaderTag,
@@ -277,6 +281,7 @@ button.action span {
 
     #oaksLab {
         bottom: 0vh;
+        padding-top: none;
     }
 
     #oak {
@@ -287,6 +292,7 @@ button.action span {
         width: 216px;
         margin-bottom: 0px;
         float:right;
+        z-index: 99;
     }
 }
 
@@ -297,6 +303,7 @@ button.action span {
     }
 
     .content,
+    .admin > #content,
     #content {
         width: 90%;
         /*font-size: 1.5em;*/
@@ -308,7 +315,9 @@ button.action span {
     }
 
     .sgBox {
-        width: 100%;
+        width: 90%;
+        max-width: 90%;
+        display: block;
     }
 
     #welcome h1 {
